Working, concurrent multi-computer player chess. No cleanup.